{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 15,
  "lineage": "1e2f863b-9216-579d-0be4-250a833d05a8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.135.175.130",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-04-10T10:51:45.556-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/terraform-gcp-492818/regions/us-central1/addresses/nat",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "nat",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "terraform-gcp-492818",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/regions/us-central1/addresses/nat",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-10T10:52:18.452-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-492818/global/firewalls/allow-iap-ssh",
            "log_config": [],
            "name": "allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/global/networks/main",
            "params": [],
            "priority": 1000,
            "project": "terraform-gcp-492818",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/global/firewalls/allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-492818/global/networks/main",
            "mtu": 0,
            "name": "main",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "4256233888138167903",
            "numeric_id": "4256233888138167903",
            "project": "terraform-gcp-492818",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/global/networks/main"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2026-04-10T10:52:18.516-07:00",
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/terraform-gcp-492818/global/routes/default-route",
            "name": "default-route",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/global/networks/main",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/global/gateways/default-internet-gateway",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "",
            "params": [],
            "priority": 1000,
            "project": "terraform-gcp-492818",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/global/routes/default-route",
            "tags": [],
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-10T10:52:18.518-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/terraform-gcp-492818/regions/us-central1/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/global/networks/main",
            "project": "terraform-gcp-492818",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/regions/us-central1/routers/router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "terraform-gcp-492818/us-central1/router/nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/regions/us-central1/addresses/nat"
            ],
            "project": "terraform-gcp-492818",
            "region": "us-central1",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/regions/us-central1/subnetworks/private",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.nat",
            "google_compute_network.vpc",
            "google_compute_router.router",
            "google_compute_subnetwork.private",
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-04-10T11:40:23.465-07:00",
            "gateway_address": "10.0.32.1",
            "id": "projects/terraform-gcp-492818/regions/us-central1/subnetworks/private",
            "ip_cidr_range": "10.0.32.0/19",
            "name": "private",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/global/networks/main",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-492818",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "172.16.0.0/14",
                "range_name": "k8s-pods"
              },
              {
                "ip_cidr_range": "172.20.0.0/18",
                "range_name": "k8s-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/regions/us-central1/subnetworks/private",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6488892080557193976
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-04-10T11:40:23.659-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraform-gcp-492818/regions/us-central1/subnetworks/public",
            "ip_cidr_range": "10.0.0.0/19",
            "name": "public",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/global/networks/main",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-492818",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-492818/regions/us-central1/subnetworks/public",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7008495544695061240
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.api"
          ]
        }
      ]
    }
  ]
}